--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^3.2.0",
+    "react-leaflet": "2.7.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "typescript": "^4.1.2",
@@ -45,7 +45,9 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.1",
     "@types/react-leaflet": "^2.8.1",
-    "@types/react-select": "^4.0.15"
+    "@types/react-select": "^4.0.15",
+    "@types/uuid": "^8.3.0"
   }
 }
